Fix Collaborations UI and validation messages
- fixes the error messages on the "Document name" field
- fixes the input field widths and labels to match the figma design

refs VICE-5004
flag=none

test plan:
- configure google docs available for collaborations
- navigate to the course's Collaborations page
- start creating a new collaboration
- verify that error messages are displayed for the "Document name" field
   if it's empty or too long (255 chars)
- create a collaboration, and then edit it
- verify that error messages are displayed for the "Document name" field
   if it's empty or too long (255 chars)

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/371693
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Sleyder Zuleta <sleyder.zuleta@instructure.com>
Product-Review: Tamás Balogh <tamas.balogh@instructure.com>

--- a/app/stylesheets/components/_g_collaborations.scss
+++ b/app/stylesheets/components/_g_collaborations.scss
@@ -47,6 +47,28 @@ $highlight-blue: #00b5fe;
   }
 }
 
+#new_collaboration, .edit_collaboration {
+  .ic-Input {
+    max-width: 28.75rem;
+  }
+
+  textarea.ic-Input {
+    height: 126px;
+  }
+}
+
+#new_collaboration {
+  margin-top: 0.625rem;
+
+  .collaboration_type_descriptions {
+    margin-bottom: 1.125rem;
+  }
+
+  #collaborate_authorize_google_docs {
+    margin-top: 1.25rem;
+  }
+}
+
 .collaboration {
   border: 1px solid $ic-border-color;
   border-radius: $ic-border-radius;
@@ -75,30 +97,6 @@ $highlight-blue: #00b5fe;
 
   .description {
     margin-bottom: 5px;
-  }
-
-  .edit_collaboration {
-    .header, .content, .footer {
-      margin: 0;
-      padding: 0;
-    }
-
-    .header {
-      input[name='collaboration[title]'] {
-        width: 300px;
-      }
-    }
-
-    .content {
-      label {
-        margin-bottom: 0;
-      }
-      textarea {
-        display: block;
-        height: 50px;
-        width: 400px;
-      }
-    }
   }
 }
 
